--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
         </div>
 
-        <div class="portfoilo-item center">
+<!--         <div class="portfoilo-item center">
           <div class="portfoilo-item-thumbnail">
             <img src="./img/port-4.png" alt="portfoilo-item-thumbnail">
           </div>
@@ -210,7 +210,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
   <section class="contact-section sec-padding " id="contact">
     <div class="container">
