--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
       </div>
       <div class="row">
         <div class="contact-form">
-          <form>
+          <form action="https://formsubmit.co/Shukursurkhayli000@gmail.com" method="POST">
             <div class="row">
                 <div class="input-group">
-                  <input type="text" placeholder="Name" class="input-control">
+                  <input type="text" placeholder="Name" class="input-control" required>
                 </div>
                 <div  class="input-group"><input type="email" placeholder="Email" class="input-control" required></div>
                 <div  class="input-group"><textarea  cols="30" rows="10" placeholder="Message" class="input-control"></textarea></div>
