--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="social-links">
               <a href="https://www.facebook.com/Thesurkhayli/" target="https://www.facebook.com/Thesurkhayli/"><i class="fab fa-facebook"></i></a>
               <a href="https://www.instagram.com/Thesurkhayli" target="https://www.instagram.com/Thesurkhayli"><i class="fab fa-instagram"></i></a>
-              <a href="" target=""><i class="fab fa-github"></i></a>
+              <a href="https://github.com/shukur939" target="https://github.com/shukur939"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
