--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
           <p>I am Shukur Surkhayli, 24 years old. I entered Baku College of Management and Technology in 2013. I started working as a web designer in a black agency in 2019. I started front-end courses in 2020. I am currently studying at the Azerbaijan University of Architecture and Civil Engineering.</p>
           <h3>Skills</h3>
           <div class="skills">
-            <div class="skill-item"><img src="./img/html5.png"></div>
-            <div class="skill-item"><img src="./img/css3.png"></div>
-            <div class="skill-item"><img src="./img/js.png"></div>
-            <div class="skill-item"><img src="./img/bootstrap.png"></i></div>
-            <div class="skill-item"><img src="./img/React.png"></div>
+            <div class="skill-item"><img src="./img/html5 edit.png"></div>
+            <div class="skill-item"><img src="./img/css3 edit.png"></div>
+            <div class="skill-item"><img src="./img/js edit.png"></div>
+            <div class="skill-item"><img src="./img/bootstrap edit.png"></i></div>
+            <div class="skill-item"><img src="./img/react edit.png"></div>
           </div>
           <div class="about-tabs">
             <button type="button" class="tab-item active" data-target="#education">education</button>
