--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="about-img">
           <div class="img-box">
-            <img src="./img/shukur.png" alt="">
+            <img src="./img/portfoilo_img.png" alt="">
           </div>
         </div>
         <div class="about-text">
