--- a/index.html
+++ b/index.html
@@ -190,6 +190,24 @@
             </div>
           </div>
         </div>
+        <div class="portfoilo-item center">
+          <div class="portfoilo-item-thumbnail">
+            <img src="./img/port-5.png" alt="portfoilo-item-thumbnail">
+          </div>
+          <h3 class="portfoilo-item-title"></h3>
+          <button  class="btn view-project-btn" type="button">To Do List 2</button>
+          <div class="portfoilo-item-details">
+            <div class="description">
+              <p>Todo list (Javascript)</p>
+              <div class="general-info">
+                <ul>
+                  <li>Technologies - <span>Javascript</span></li>
+                  <li>View online - <span><a href="https://shukur939.github.io/TodoList-2/" target="https://shukur939.github.io/TodoList-2/">Demo</a></span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
   </section>
   <section class="contact-section sec-padding " id="contact">
     <div class="container">
