--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <button  class="btn view-project-btn" type="button">Fryday burger</button>
           <div class="portfoilo-item-details">
             <div class="description">
-              <p>HTML CSS / Responsive Site / Full page </p>
+              <p>Friday Burger </p>
               <div class="general-info">
                 <ul>
                   <li>Technologies - <span>Html,Css,Javascript</span></li>
@@ -208,7 +208,26 @@
             </div>
           </div>
         </div>
+        <div class="portfoilo-item center">
+          <div class="portfoilo-item-thumbnail">
+            <img src="./img/port-6.png" alt="portfoilo-item-thumbnail">
+          </div>
+          <h3 class="portfoilo-item-title"></h3>
+          <button  class="btn view-project-btn" type="button">Gloria Jeans</button>
+          <div class="portfoilo-item-details">
+            <div class="description">
+              <p>Gloria Jeans / Coffee site</p>
+              <div class="general-info">
+                <ul>
+                  <li>Technologies - <span>Html,Css,Scss,Js</span></li>
+                  <li>View online - <span><a href="https://shukur939.github.io/Gloria-jeans-coffee/" target="https://shukur939.github.io/Gloria-jeans-coffee/">Demo</a></span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
   </section>
+  <!-- Contact -->
   <section class="contact-section sec-padding " id="contact">
     <div class="container">
       <div class="row">
