--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div class="contact-info">
           <div class="contact-info-item">
             <h3>Email</h3>
-            <p>Shukursurkhayli000@gmail.com</p>
+            <p>Thesurkhayli@yandex.com</p>
           </div>
           <div class="contact-info-item">
             <h3>Phone</h3>
