--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <div class="timeline-item">
                 <span class="date">2013-2017</span>
                 <h4>Subbakalavr -
-                  Baku College of Management and Technology</h4>
+                  Azerbaijan State Oil and Industry At the University College of Industry and Technology</h4>
                 <p>Information technology systems - Computer Engineering</p>
               </div>
               <div class="timeline-item">
