--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
 
         <div class="portfoilo-item center">
           <div class="portfoilo-item-thumbnail">
-            <img src="./img/port-3.png" alt="portfoilo-item-thumbnail">
+            <img src="./img/port-7.png" alt="portfoilo-item-thumbnail">
           </div>
           <h3 class="portfoilo-item-title"></h3>
-          <button  class="btn view-project-btn" type="button">To Do List</button>
+          <button  class="btn view-project-btn" type="button">Menu Bar</button>
           <div class="portfoilo-item-details">
             <div class="description">
-              <p>Todo list (Javascript ES5)</p>
+              <p>Menu-Bar</p>
               <div class="general-info">
                 <ul>
-                  <li>Technologies - <span>Javascript</span></li>
-                  <li>View online - <span><a href="https://shukur939.github.io/ToDoList/" target="https://shukur939.github.io/ToDoList/">Demo</a></span></li>
+                  <li>Technologies - <span>Html,Css,Javascript</span></li>
+                  <li>View online - <span><a href="https://shukur939.github.io/Menu-Bar/" target="https://shukur939.github.io/Menu-Bar/">Demo</a></span></li>
                 </ul>
               </div>
             </div>
@@ -289,10 +289,10 @@
 
 
 <script src="./js/main.js"></script>
+<script src="https://kit.fontawesome.com/5d4b57e933.js"></script>
 <script src="./js/particles.js"></script>
 <script src="./js/app.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
-<script src="https://kit.fontawesome.com/5d4b57e933.js"></script>
 </body>
 
 </html>
