--- a/index.html
+++ b/index.html
@@ -226,6 +226,24 @@
             </div>
           </div>
         </div>
+        <div class="portfoilo-item center">
+          <div class="portfoilo-item-thumbnail">
+            <img src="./img/port-8.png" alt="portfoilo-item-thumbnail">
+          </div>
+          <h3 class="portfoilo-item-title"></h3>
+          <button  class="btn view-project-btn" type="button">NetSerial</button>
+          <div class="portfoilo-item-details">
+            <div class="description">
+              <p>NetSerial / My Demo Film Script</p>
+              <div class="general-info">
+                <ul>
+                  <li>Technologies - <span>Html,Css,Scss,Js</span></li>
+                  <li>View online - <span><a href="https://shukur939.github.io/NetSerial/" target="https://shukur939.github.io/NetSerial/">Demo</a></span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
   </section>
   <!-- Contact -->
   <section class="contact-section sec-padding " id="contact">
