--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <!-- experience -->
           </div>
-          <a href="./Şükür Surxaylı.pdf"  class="btn">Download cv</a>
+          <a href="./Surxaylı Şükür Cv.pdf" target="./Surxaylı Şükür Cv.pdf" class="btn">Download cv</a>
           <a href="#contact" class="btn link-item">contact me</a>
         </div>
       </div>
